--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="google-site-verification" content="HYd9ez8MYtzR44Jcq1zSTyasCmYfauLEEVyZdJ-B_U8" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
   
-  <title>rontend Mentor | QR code component</title>
+  <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" href="style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   
